# lime

./: .gitignore  LICENSE  NOTICE  README.md  plot.py  pyproject.toml  utils.py
lrp/: patch_qwenvl.py  patch_salmonn.py  patches.py  qwen2_audio_lrp.py  utils.py
minimal_tests/: testing_speechlm.py  testing_visionlm.py
models/: descriptor.py  llava.py  qwen2_audio.py  qwenvl.py  qwenvl2_5.py  salmonn7b.py  tokenizer.py
models/modeling/: modeling_llama_kv_opt.py  modeling_llama_kv_opt_salmonn.py  modeling_llama_lime.py  modeling_llama_lime_salmonn.py  modeling_qwen.py  modeling_qwen2_5_vl_kv_opt.py  modeling_qwen2_5_vl_lime.py  modeling_qwen2_audio_kv_opt.py  modeling_qwen2_audio_lime.py  modeling_qwen_kv_opt.py  modeling_qwen_lime.py
models/speechlms/qwen2_audio/: modeling_qwen2_audio_kv_opt.py  qwen2_audio.py
models/speechlms/salmonn7b/: modeling_llama_kv_opt.py  modeling_llama_kv_opt_salmonn.py  salmonn7b.py
models/visionlms/llava/: llava.py  modeling_llama_kv_opt.py
models/visionlms/qwenvl/: modeling_qwen2_5_vl_kv_opt.py  qwenvl.py
playgrounds/: playground_llava.ipynb  playground_qwen2audio.ipynb  playground_qwenvl.ipynb  playground_salmonn.ipynb  playground_vlm.py  plyground_slm.py  run_playground_slm.sh  run_playground_vlm.sh  run_slm.sh  run_vlm.sh  slm.py  vlm.py
