[project]
name = "speechlm-explainability"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "numpy==1.25.2",
    "pandas",
    "nvitop",
    "huggingface_hub",
    "librosa",
    "textgrid",
    "lxt",
    "wandb",
    "datasets",
    "qwen-vl-utils",
    "pytorch-lightning",
    "transformers==4.51.0",
    "openai",
    "tiktoken",
    "transformers_stream_generator",
    "einops",
    "transformers_modules",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "torchaudio==2.1.2",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu120"]